2006-11-13  Lars Clausen  <lars@raeder.dk>

	* app/layer_dialog.c: Revamped the visibility toggling system to
	make visibility change a properly undoable operation, making the
	page borders resize in the process.

	* objects/standard/line.c (line_load, line_save): 
	* objects/standard/arc.c (arc_load, arc_save): 
	* objects/standard/polyline.c (polyline_load, polyline_save): 
	* objects/standard/bezier.c (bezierline_load, bezierline_save): 
	* objects/standard/zigzagline.c (zigzagline_load, zigzagline_save):
	Use generic load/save functions.

	* lib/libdia.def: 
	* lib/arrows.[ch]: Generic functions for loading and saving
	arrows, including sanitizing on load (inspired by bug #144394).  

	* objects/FS/flow-ortho.c (orthflow_draw): 
	* objects/FS/flow-poly.c (orthflow_draw): Update to use modern
	arrow rendering.

	* app/modify_tool.c (modify_start_text_edit) 
	(modify_make_text_edit): Don't use dia_font_scaled_* when
	avoidable. 

2006-10-29  Steffen Macke <sdteffen@gmail.com>

	* app/paginate_psprint.c: Made compile with MSVC again

2006-10-26  Lars Clausen  <lars@raeder.dk>

	* app/interface.[ch]: Patch from jan@uos.de: Write the accelerator
	keys in tooltips for standard tools.

	* app/paginate_psprint.c: Patch for better printing: Reasonable
	file name, check before overwriting, re-popup if file write
	failed.  Thanks to Leon Stringer <leon.stringer@ntlworld.com> for
	this patch.

2006-10-26  Hans Breuer  <hans@breuer.org>

	* plug-ins/shape/shape-export.c : the icon export facility dependens
	on the libart-size-hack; use filter_get_by_name("png-libart") instead
	of filter_guess_export_filter(). Fixes bug #364491.

2006-10-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS

2006-10-16  Hans Breuer  <hans@breuer.org>

	* objects/UML/class.c : the comment wrapping was only working for
	plain ASCII, now it deals with UTF-8 (Vadim Zelenin, bug #349765)

2006-10-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
